fix the non-alignment layout

--- a/public/sass/lang/_en.scss
+++ b/public/sass/lang/_en.scss
@@ -7,6 +7,9 @@
             .tool-panel {
                 .controls {
                     width: 250px;
+                    .text-center {
+                        width: 55px;
+                    }
                 }
             }
         }
